--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ input[type="radio"].visually-hidden {
   height: 17px;
 
   background-image: url("../img/icon-search-normal.svg");
+  background-repeat: no-repeat;
   background-color: transparent;
   opacity : 0.2;
   border: none;
@@ -281,6 +282,14 @@ input[type="radio"].visually-hidden {
 
 .user-icon-logout:hover {
   background-image: url("../img/icon-logout-hover.svg");
+}
+
+.user-icon-men:active {
+  background-image: url("../img/icon-user-normal.svg");
+}
+
+.user-icon-logout:active {
+  background-image: url("../img/icon-logout-normal.svg");
 }
 
 .user-name:active {
@@ -963,7 +972,8 @@ input[type="radio"].visually-hidden {
   width: 300px;
 }
 
-.company-address img {
+.company-address .company-address-map {
+  display: block;
   margin-top: 33px;
 }
 
@@ -1043,7 +1053,7 @@ input[type="radio"].visually-hidden {
 .filter-catalog {
   display: flex;
   justify-content: space-between;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
 }
 
 .page-title {
@@ -1266,10 +1276,18 @@ input[type="radio"].visually-hidden {
 
   margin: 0;
   padding: 0;
-  margin-bottom: 19px;
+  margin-bottom: 23px;
 
   text-transform: uppercase;
+  
+}
+
+.filter fieldset:nth-child(2) {
   border-bottom: 1px solid #c5c5c5;
+}
+
+.filter fieldset:nth-child(3) {
+  margin-top: 16px;
 }
 
 .filter .filter-option {
@@ -1394,7 +1412,7 @@ input[type="radio"].visually-hidden {
   width: 140px;
   height: 38px;
   color: #000000;
-  margin-top: 38px;
+  margin-top: 55px;
 
   border: solid 1px #e5e5e5;
   background-color: #ffffff;
@@ -1402,12 +1420,24 @@ input[type="radio"].visually-hidden {
   cursor: pointer;
 }
 
+.filter-button:hover {
+  border: 1px solid #bdc6ca;
+}
+
+.filter-button:active {
+  border: 1px solid #ee3643;
+}
+
+.filter-button:focus {
+  outline: none;
+}
+
 .catolog-list {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
   justify-content: space-between;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
 
   margin: 0;
   padding: 0;
@@ -1600,7 +1630,7 @@ input[type="radio"].visually-hidden {
 }
 
 .pagination-list {
-  font-family: PT Sans;
+  font-family: "PT Sans", Arial, sans-serif;
   display: flex;
   justify-content: flex-start;
   list-style: none;
@@ -1640,7 +1670,7 @@ input[type="radio"].visually-hidden {
 }
 
 .pagination-item-current a:hover {
-  border: none;
+  border: 1px solid #ee3643;
 }
 
 .pagination-item-next a {
@@ -1671,7 +1701,7 @@ input[type="radio"].visually-hidden {
   font-size: 13px;
   line-height: 24px;
   font-weight: 400;
-  font-family: "PT Sans";
+  font-family: "PT Sans", Arial, sans-serif;
   letter-spacing: 0.1px;
 
   margin: 0;
