--- a/css/style.css
+++ b/css/style.css
@@ -1905,10 +1905,12 @@ input[type="radio"].visually-hidden {
 
 .footer-menu a:active {
   color: rgba(241, 245, 247, 0.5);
+  text-decoration: none;
 }
 
 .footer-categories a:active {
   color: rgba(255, 209, 128, 0.5);
+  text-decoration: none;
 }
 
 .footer-yellow-name:active {
@@ -1932,8 +1934,7 @@ input[type="radio"].visually-hidden {
 /*Модальные окна*/
 
 .modal {
-  position: fixed;
-  width: 620px;
+  position: fixed;;
   display: none;
 
   background-color: #ffffff;
@@ -1942,14 +1943,32 @@ input[type="radio"].visually-hidden {
   z-index: 50;
 }
 
-.container-modal {
+.modal-container {
   width: 460px;
   margin: 0 auto;
   padding: 0px;
 }
 
-.modal-show {
-  display: block;
+.modal-letter,
+.modal-productbasket {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-letter {
+  width: 620px;
+  padding: 0;
+}
+
+.letter-form fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.letter-form-bottom {
+  background-color: #f4f4f4;
 }
 
 .modal-close {
@@ -1990,19 +2009,18 @@ input[type="radio"].visually-hidden {
   transform: rotate(-45deg);
 }
 
-.modal-letter,
-.modal-productbasket {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 /*Модальное окно на главной*/
 
-.letter-form {
+.letter-form-top .modal-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-top: 45px;
+  padding-bottom: 35px;
+}
+
+.letter-form-item {
+  margin: 0;
 }
 
 .letter-form label {
@@ -2022,11 +2040,20 @@ input[type="radio"].visually-hidden {
   font: inherit;
   width: 220px;
 
-  padding-top: 13px;
+  padding-top: 5px;
   padding-left: 15px;
-  padding-bottom: 13px;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
 
   border: solid 2px #dee3e4;
+}
+
+.letter-form-item input::placeholder,
+.letter-form-item textarea::placeholder {
+  font-family: "PT Sans", Arial, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  color: #a9a9a9;
 }
 
 .letter-form input:hover {
@@ -2041,6 +2068,7 @@ input[type="radio"].visually-hidden {
 .letter-form textarea {
   box-sizing: border-box;
   width: 460px;
+  height: 114px;
   padding-top: 13px;
   padding-left: 15px;
 
@@ -2056,10 +2084,25 @@ input[type="radio"].visually-hidden {
   outline: none;
 }
 
+.modal-letter-button {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  cursor: pointer;
+}
+
 /*Модальное окно в каталоге*/
 
-.modal-top-productbasket {
+.modal-productbasket {
+  width: 620px;
+  padding: 0;
+}
+
+.modal-top-productbasket .modal-container {
   display: flex;
+  justify-content: flex-start;
   align-items: center;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -2068,9 +2111,9 @@ input[type="radio"].visually-hidden {
 .check-mark {
   width: 66px;
   height: 66px;
-  margin-left: 80px;
 
-  background-image: url("../img/form-1.svg")
+  background-image: url("../img/form-1.svg");
+  background-repeat: no-repeat;
 }
 
 .modal-top-text {
@@ -2080,23 +2123,29 @@ input[type="radio"].visually-hidden {
   margin-left: 30px;
 }
 
-.modal-bottom {
-  margin: 0;
+.modal-bottom-productbasket {
   background-color: #f1f1f1;
-  padding: 35px 80px;
-  text-align: left;
 }
 
-.button-checkout {
-  padding: 14px 60px;
+.modal-bottom-productbasket .modal-container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+.button-checkout,
+.button-order {
+  width: 220px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .button-order {
-  padding: 14px 45px;
   color: #000000;
-  margin-left: 10px;
-
   background-color: #ffffff;
+}
 
-  cursor: pointer;
+.modal-show {
+  display: block;
 }
