--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
 
 a {
   text-decoration: none;
-  color: #ffffff;
 }
 
 img {
@@ -51,6 +50,14 @@ input[type="radio"].visually-hidden {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.footer-menu a,
+.footer-phone,
+.header-top a,
+.site-navigation a,
+.catolog-item-button a {
+    color: #fff;
 }
 
 .menu {
@@ -849,12 +856,18 @@ input[type="radio"].visually-hidden {
 }
 
 .services-control-item {
+  display: block;
   font-size: 21px;
   line-height: 30px;
   padding: 12px 24px 17px;
+  width: 100%;
+  text-align: left;
   color: #ffffff;
+
+  
   box-shadow: 0px 1px 0 0 #293449, inset 0px 1px 0 0 #405069;
   background-color: #32425c;
+  border: none;
   cursor: pointer;
 }
 
@@ -1933,9 +1946,30 @@ input[type="radio"].visually-hidden {
 
 /*Модальные окна*/
 
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
 .modal {
   position: fixed;;
-  display: none;
 
   background-color: #ffffff;
   border-top: 7px solid #ee3643;
@@ -1953,7 +1987,8 @@ input[type="radio"].visually-hidden {
 .modal-productbasket {
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%,-300%);
+  transition: .5s;
 }
 
 .modal-letter {
@@ -2144,8 +2179,13 @@ input[type="radio"].visually-hidden {
 .button-order {
   color: #000000;
   background-color: #ffffff;
+  cursor: pointer;
 }
 
 .modal-show {
-  display: block;
+  transform: translate(-50%,-50%);
+}
+
+.modal-error {
+  animation: shake 0.6s;
 }
